src/objects/IBBQuotation__c.object
<CustomObject>
    <fields>
        <fullName>AcquisitionAmount__c</fullName>
        <label>AcquisitionAmount</label>
        <summarizedField>IBBQuotationItem__c.AcquisitionAmount__c</summarizedField>
        <summaryFilterItems>
            <field>IBBQuotationItem__c.Name</field>
            <operation>contains</operation>
            <value>0001</value>
        </summaryFilterItems>
        <summaryForeignKey>IBBQuotationItem__c.IBBQuotation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applicant_2__c</fullName>
        <formula>IF( TEXT(Opportunity__r.Number_of_People_Applying__c ) = &apos;2&apos;,null, Opportunity__r.Applicant_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_3__c</fullName>
        <formula>IF( TEXT(Opportunity__r.Number_of_People_Applying__c ) = &apos;3&apos;, null , Opportunity__r.Applicant_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_4__c</fullName>
        <formula>IF( TEXT(Opportunity__r.Number_of_People_Applying__c ) = &apos;4&apos;, Opportunity__r.Applicant_4__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_FIS__c</fullName>
        <label>Attachment FIS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceAtEndofFRRD__c</fullName>
        <label>BalanceAtEndofFRRD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Back_Amount__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Cash_back_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Back Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CongaFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CongaFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CongaTest__c</fullName>
        <formula>&quot;&amp;id=&quot; +Id+
&quot;&amp;queryid=[lines]a18M0000004lEt8,[opp]a18M0000004lEtK&quot; +
&quot;&amp;templateid=&quot;+  FIS_Conga_DocumentId__c +
&quot;&amp;DefaultPDF=True&quot; +
&quot;&amp;QMode=1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CongaTest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_FIS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga FIS</label>
        <referenceTo>CongaSettings__c</referenceTo>
        <relationshipName>IBBQuotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga_Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_80</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealAmount__c</fullName>
        <label>DealAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <label>DealType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <formula>Opportunity__r.Deposit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DiscountedAmoun__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.IBB_Finance_Rental_Rate_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscountedAmoun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiry_date_of_product__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.expiry_date_of_fixed_product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry date of product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FIS_Conga_DocumentId__c</fullName>
        <label>FIS_Conga_DocumentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalAcquisitionPayment__c</fullName>
        <description>C00198</description>
        <label>FinalAcquisitionPayment</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinanceRequired__c</fullName>
        <formula>Opportunity__r.Finance_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FinanceRequired</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstRentReviewDate__c</fullName>
        <label>FirstRentReviewDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HPPP_Rent__c</fullName>
        <formula>rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPPP Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPPP_TotalRepayment__c</fullName>
        <formula>TotalRepayment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPPP TotalRepayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPP_AcquisitionAmount__c</fullName>
        <formula>AcquisitionAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPP AcquisitionAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBBProductOpp__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBBProductOpp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBBProductSet__c</fullName>
        <label>IBBProductSet</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBBProduct__c</fullName>
        <label>IBBProduct</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.IBBHomeFinanceRentalRateMargin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MarketingProductCode__c</fullName>
        <label>MarketingProductCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_FTV__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Max_finance_to_value_FTV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum FTV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>IF( Opportunity__r.RecordTypeId =&apos;012D0000000QklN&apos;, Opportunity__r.Product_Switch_Date__c , Opportunity__r.DealFirstPaymentDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentBeforeFRRD__c</fullName>
        <label>MonthlyPaymentBeforeFRRD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentFixed__c</fullName>
        <label>MonthlyPaymentFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentUntilFRRD__c</fullName>
        <label>MonthlyPaymentUntilFRRD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyPaymentVariable__c</fullName>
        <label>MonthlyPaymentVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonthsFixed__c</fullName>
        <label>NumberOfMonthsFixed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonthsVariable__c</fullName>
        <label>NumberOfMonthsVariable</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfMonths__c</fullName>
        <label>NumberOfMonths</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_IBB_variable_rental_rate__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity__r.Interested_in__c,&apos;Home Purchase Plan Premier&apos;), Rate__c , Rate_after_Fixed_rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer IBB variable rental rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offer_Margin__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity__r.Interested_in__c , &apos;Home Purchase Plan Premier&apos;) , Opportunity__r.HPP_Premier_Margin__c , Opportunity__r.IBB_Product__r.IBBHomeFinanceRentalRateMargin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offer_schedule_o_monthly_payment__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity__r.IBB_Product__r.Rate_Type__c ,&apos;standard&apos;), MonthlyPaymentVariable__c , MonthlyPaymentFixed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer schedule o monthly payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>IBBQuotations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PrimaryName__c</fullName>
        <formula>Opportunity__r.Account.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimaryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSwitchBalance__c</fullName>
        <label>ProductSwitchBalance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductSwitchDate__c</fullName>
        <label>ProductSwitchDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchasePrice__c</fullName>
        <formula>Opportunity__r.Purchase_price_market_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PurchasePrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurposeOfFinance__c</fullName>
        <formula>TEXT(Opportunity__r.Purpose_of_Finance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PurposeOfFinance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDate__c</fullName>
        <label>QuoteDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteReference__c</fullName>
        <label>QuoteReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteToBeAIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCERetrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCERetrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RateAfterFixedPeriodExpiry__c</fullName>
        <label>RateAfterFixedPeriodExpiry</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <formula>Opportunity__r.IBB_Rent_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_after_Fixed_rate__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Rate_after_fixed_period_expiry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate after Fixed rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RatioPerPound__c</fullName>
        <label>RatioPerPound</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaing_Term__c</fullName>
        <formula>Text( (NumberOfMonths__c - Mod( NumberOfMonths__c, 12))/12) 

+ &apos; years, &apos; 
+ TExt(Mod( NumberOfMonths__c, 12)) + &apos; months&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaing Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RentRate__c</fullName>
        <label>RentRate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevertRate__c</fullName>
        <description>C00197</description>
        <label>RevertRate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_Of_Finance__c</fullName>
        <label>Term Of Finance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>Text(Opportunity__r.Term_of_Finance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheStartDate__c</fullName>
        <label>TheStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalAcquisitionFixed__c</fullName>
        <label>TotalAcquisitionFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAcquisitionVariable__c</fullName>
        <label>TotalAcquisitionVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAmountPayable__c</fullName>
        <formula>FinanceRequired__c   +  TotalRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalAmountPayable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyAquisitionPaymentBeforeFRRD__c</fullName>
        <label>TotalMonthlyAquisitionPaymentBeforeFRRD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyPaymentBeforeFRRD__c</fullName>
        <label>TotalMonthlyPaymentBeforeFRRD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalMonthlyRepayment__c</fullName>
        <formula>Total_amount_you_must_pay_HPP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalMonthlyRepayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPaymentAfterFixedPeriod__c</fullName>
        <label>TotalPaymentAfterFixedPeriod</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRent__c</fullName>
        <label>TotalRent</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalRentalFixed__c</fullName>
        <label>TotalRentalFixed</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRentalVariable__c</fullName>
        <label>TotalRentalVariable</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRepayment__c</fullName>
        <label>TotalRepayment</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_amount_you_must_pay_HPP__c</fullName>
        <label>Total monthly repayment</label>
        <summarizedField>IBBQuotationItem__c.TotalRepayment__c</summarizedField>
        <summaryForeignKey>IBBQuotationItem__c.IBBQuotation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valuation_Contribution_Amount__c</fullName>
        <formula>Opportunity__r.IBB_Product__r.Valuation_Contribution_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VariableRate__c</fullName>
        <label>VariableRate</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>congaSettingFixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>congaSettingFixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rent__c</fullName>
        <label>rent</label>
        <summarizedField>IBBQuotationItem__c.Rent__c</summarizedField>
        <summaryForeignKey>IBBQuotationItem__c.IBBQuotation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MarketingProductCode__c</columns>
        <columns>DealAmount__c</columns>
        <columns>FinanceRequired__c</columns>
        <columns>MonthlyPaymentFixed__c</columns>
        <columns>MonthlyPaymentVariable__c</columns>
        <columns>NumberOfMonths__c</columns>
        <columns>NumberOfMonthsFixed__c</columns>
        <columns>NumberOfMonthsVariable__c</columns>
        <columns>Term_Of_Finance__c</columns>
        <columns>TotalAcquisitionFixed__c</columns>
        <columns>TotalAcquisitionVariable__c</columns>
        <columns>TotalMonthlyRepayment__c</columns>
        <columns>Total_amount_you_must_pay_HPP__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>